# ArcMath

./: .gitignore  README.md  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  ycm_extra_conf
src/: .clang-format  .ycm_extra_conf.py  .ycm_extra_conf.py.old  CMakeLists.txt  compile_commands.json  foo.vim  session.vim  test-session
src/.clangd/index/: AccessOperators.hpp.1D5935501081FE2F95D04DD7C17F9063A3898306.idx  Arc2d.cpp.D0C300F884BBAE6A39F60E308B645D380E588EC4.idx  Arc2d.hpp.CFC0965A5B5491B97B50853BAA893A909B7D5201.idx  Assert.hpp.86D36E51CA48E1896D229EE5B51598A47B476729.idx  BinaryOperators.hpp.EAA83520C36A4131C5C434243004DAC28C3F96E6.idx  Circle2d.cpp.265029479B8C8A8BB713D1E8A7762AF4E0C37154.idx  Circle2d.hpp.64374F99F5C36B95E5FD698BAECB7C29B89B11BC.idx  CoefReffs.hpp.9A81AB1A04BA6D92166AE21A561FA2DA87809324.idx  Common.hpp.3B0C95568F13E80C0109E2F47A7A096AE8DADB32.idx  CoreMath.cpp.A994C51BF78983922A88AE7CA0703FC710F15C2A.idx  CoreMath.hpp.E81888C6286C5ECFCF8EB86E4101DDAC8E193DBE.idx  ForwardDeclare.hpp.236A3EB9C662DF61C658C77E677DB4BAB2A2C3F3.idx  GenericPointerIterator.hpp.96D8C81A52070918DB46D3BE1C48DE48BC0CFB2C.idx  Line.cpp.BE47BA3552CF9BE9164AF8FD8555DF98FBDFA50C.idx  Main.cpp.176FA2B1D5E6E9E9499CE9F4577AC201F410CC55.idx  MapAccessor.hpp.048C43D0B0234243AFF72211752EC85D8A1928F9.idx  Matrix.731B76083130A35CCD67072E9BB2323B8566F2AB.idx  Matrix.hpp.8E8C29E16CE9DC92137DDBB88125AC1CF852729C.idx  MatrixBase.hpp.B6EEE0ECCEEC0787A7262D547794371F8568B6FE.idx  MatrixFunctions.hpp.8CDEB907D406AEE7C338E1C7E8FEF84CAD414DEA.idx  MatrixIteratorAccess.hpp.6DE845B518853F7B41134DD5DCE0E64D440AB64D.idx  MatrixOptions.hpp.5F47F95771FA52C29ECCAE2AD1C959A17360652A.idx  MatrixStorage.hpp.29908BA90A757136C756A1EB73AD39804A676AC0.idx  MatrixStorageBase.hpp.D78B226D9ABB68B09CC0C3CABFC9AF07C4D6AA96.idx  MatrixTraits.hpp.FF37F425FE13F407D45BCDB351CB1A573FE62753.idx  PatternMatch.hpp.9BFAD8DDB5D3F3BA09543A9A068AC5CE7092EC53.idx  Plane.cpp.CA0D7F462ED858FC45254D8E74B62E06B7E51AE5.idx  Plane.hpp.83ADF21B1B728EC7CC5678873C7C6751CCAC9668.idx  Policies.hpp.C59522530AA2A7D88156B2F3C0A027C3936D06A4.idx  Printable.hpp.4298CFCBA3D8F23A02F8B8B83B25FAAC8AB682E4.idx  Ray.cpp.8AEB63756A5847D7776663570E69BA1225F70DB6.idx  Result.cpp.46E2F65D6D0EC7BD5041C7279DCCE6545752FCAA.idx  Result.hpp.B41D4D612E1B6F5592B4005312BA7B18E85F5549.idx  SourceLocation.hpp.33891A97917E8E28FA4DE4471A368264B46BC9EE.idx  Span.hpp.78EEFE58287A734D623475B7925F31B8969FA98F.idx  Sphere.cpp.6039917D4BD57863904FF6F900D7003D5F8EE2FD.idx  Sphere.hpp.2EE3B643A797AD9A6043501A51D85CB9AED01AD5.idx  StringUtility.cpp.D777BFE9A57E33766CC7A001338A193360397651.idx  StringUtility.hpp.4B35641972AC468B55BA85AB62C2595C92CA3572.idx  Traits.hpp.3CE921A9A30EB576C1C1FD697A9D207C7567550E.idx  (+291 more)
src/Core/: CMakeLists.txt
src/Core/Collections/: HeaphArray.hpp  Span.hpp
src/Core/Debug/: Assert.hpp  CMakeLists.txt  SourceLocation.hpp
src/Core/Utility/: CMakeLists.txt  PatternMatch.hpp  Result.cpp  Result.hpp  StringUtility.cpp  StringUtility.hpp  TypeUtility.hpp
src/GUI/: CMakeLists.txt
src/GUI/Application/: Application.cpp  Application.hpp  CMakeLists.txt  IApplication.hpp
src/GUI/GraphWindow/: CMakeLists.txt  GraphWindow.cpp  GraphWindow.hpp  GraphWindowController.cpp  GraphWindowController.hpp  GraphWindowModel.cpp  GraphWindowModel.hpp  GraphWindowView.cpp  GraphWindowView.hpp  IGraphWindow.cpp  IGraphWindow.hpp  IGraphWindowController.cpp  IGraphWindowController.hpp  IGraphWindowModel.cpp  IGraphWindowModel.hpp  IGraphWindowView.cpp  IGraphWindowView.hpp
src/GUI/Notebook/: CMakeLists.txt  Notebook.cpp  Notebook.hpp  NotebookModel.cpp  NotebookModel.hpp  NotebookView.cpp  NotebookView.hpp
src/GUI/ObjectModel/: CMakeLists.txt  Object.cpp  Object.hpp
src/GUI/Widgets/: CMakeLists.txt  GraphicsWindow.cpp  GraphicsWindow.hpp  GraphicsWindowController.cpp  GraphicsWindowController.hpp  GraphicsWindowModel.cpp  GraphicsWindowModel.hpp  GraphicsWindowView.cpp  GraphicsWindowView.hpp  IGraphicsWindowController.hpp  IGraphicsWindowModel.hpp  IGraphicsWindowView.cpp  IGraphicsWindowView.hpp  IWindowController.hpp  IWindowModel.hpp  IWindowView.hpp  ListPlotView.cpp  ListPlotView.hpp  TiledLayoutView.cpp  TiledLayoutView.hpp  Window.cpp  Window.hpp  WindowController.hpp  WindowModel.hpp  WindowView.cpp  WindowView.hpp
src/GUI/Widgets/old/: ListPlotGraphic.hpp
src/Math/: CMakeLists.txt  CoreMath.cpp  CoreMath.hpp
src/Math/Core/: CMakeLists.txt  CoreMath.hpp
src/Math/Geometry/: CMakeLists.txt
src/Math/Geometry/Shapes/: Arc2d.cpp  Arc2d.hpp  Circle2d.cpp  Circle2d.hpp  Line.cpp  Line.hpp  Plane.cpp  Plane.hpp  Ray.hpp  Sphere.cpp  Sphere.hpp
src/Math/LinearAlgebra/: BinaryOperators.hpp  CMakeLists.txt  CoefReffs.hpp  CoeffRefs.hpp  Common.hpp  ForwardDeclarations.hpp  ForwardDeclare.hpp  GenericPointerIterator.hpp  MapAccessor.hpp  Mat.hpp  Mat.inl  Matrix  Matrix.hpp  MatrixAccessors.hpp  MatrixBase.hpp  MatrixCoeffRefs.hpp  MatrixFunctions.hpp  MatrixIterator.hpp  MatrixIteratorAccess.hpp  MatrixMap.hpp  MatrixMapAccessors.hpp  MatrixMapBase.hpp  MatrixNamedMemberRefs.hpp  MatrixOptions.hpp  MatrixPrinter.hpp  MatrixRowsColumns.hpp  MatrixStorage.hpp  MatrixStorageBase.hpp  NamedMembers.hpp  Printable.hpp  Traits.hpp  Vec.hpp  Vec.inl  back_substitution.hpp  common.hpp  forward_declare.hpp  linprog_simplex_rev.hpp  matrix.hpp  matrix_accessors.hpp  matrix_base.hpp  (+10 more)
src/Math/LinearAlgebra/old/: AccessOperators.hpp  BinaryOperators.hpp  CMakeLists.txt  Common.hpp  DecomposeQR.hpp  GenericPointerIterator.hpp  MapAccessor.hpp  Mat.hpp  Mat.inl  (+8 more)
src/Math/Solvers/: CMakeLists.txt  GoldenMethod.cpp  GoldenMethod.hpp  RevSimplex.cpp  RevSimplex.hpp
src/Math/Utility/: ConstUtility.hpp
src/Plot/: CMakeLists.txt
src/Plot/Graphics/: CMakeLists.txt  Graphic.hpp  IGraphic.hpp  TiledLayout.cpp  TiledLayout.hpp
src/Plot/Plots/: CMakeLists.txt  ListPlot.cpp  ListPlot.hpp  ListPlotModel.cpp  ListPlotModel.hpp
src/playground/: .pro  CMakeLists.txt  Main.cpp  MainWidget.cpp  MainWidget.hpp  Window.cpp  Window.hpp
(+9 files in other folders)
